# PreImgAugment.py

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  ReadMe.md  ToDo.tsv  pyproject.toml  tutorial.ipynb
PreImgAugment/: MarkovChain.py  __init__.py
PreImgAugment/autoaugment/: __init__.py
PreImgAugment/autoaugment/AugmentersSpec/: __init__.py
PreImgAugment/autoaugment/AugmentersSpec/specBundle/: T.npy  __init__.py  dists.json  p0.npy
PreImgAugment/autoaugment/backends/imaug/: __init__.py  augmenters.py  utils.py
scripts/: genUtils.py  trainSpecBundle.ipynb
tests/: tests.py
